refactor: WsCatalogBuilder 스레드 안전성 단순화 및 내부 구조 개선
- double-checked locking -> @PostConstruct 로 교체, build() 단순 getter
- SchemaExpander inner class 도입: 탐색 상태(pending/visited/result/seenByName) 캡슐화
- typeNameOf 정적 메서드 분리로 buildEnvelope 에서 SchemaExpander 1회용 사용 제거
- describeFieldType -> registerTypes(등록) + typeNameOf(포맷팅) 역할 분리
- describePayloadType 내 registerIfDescribable 중복 호출 제거
- findRequestSchemas 들여쓰기 감소 (continue + 삼항 연산자)
- 테스트 .get(0) -> .getFirst() 전체 치환

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>